Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/syntax/6318240/BarNeg2.out
BarNeg2.java:9:45: compiler.err.generic.array.creation
1 error
